--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.Bcl.TimeProvider" version="8.0.0" />
   <package id="R3" version="1.3.0" manuallyInstalled="true" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" />
   <package id="System.Threading.Channels" version="8.0.0" />
+  <package id="ZLinq" version="1.4.3" manuallyInstalled="true" />
 </packages>
