--- a/.editorconfig
+++ b/.editorconfig
@@ -162,7 +162,7 @@ csharp_space_between_square_brackets = false
 
 # 折り返しの設定
 csharp_preserve_single_line_blocks = true
-csharp_preserve_single_line_statements = false
+csharp_preserve_single_line_statements = true
 
 #### 命名スタイル ####
 
